// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::Typeahead render phases renders the ACCUM phase 1`] = `
<section
  className="typeahead "
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="m-btn-inside-input input-contains-label"
  >
    <label
      className="input-contains-label_before input-contains-label_before__search"
    />
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter your search text"
      type="text"
      value="i"
    />
    <button
      className="a-btn a-btn__link"
      onClick={[Function]}
    >
      <span
        className="cf-icon cf-icon-delete"
      />
      Clear
    </button>
  </div>
</section>
`;

exports[`component::Typeahead render phases renders the EMPTY phase 1`] = `
<section
  className="typeahead "
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="m-btn-inside-input input-contains-label"
  >
    <label
      className="input-contains-label_before input-contains-label_before__search"
    />
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter your search text"
      type="text"
      value=""
    />
  </div>
</section>
`;

exports[`component::Typeahead render phases renders the ERROR phase 1`] = `
<section
  className="typeahead "
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="m-btn-inside-input input-contains-label"
  >
    <label
      className="input-contains-label_before input-contains-label_before__search"
    />
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter your search text"
      type="text"
      value=""
    />
  </div>
  <span
    className="error"
  >
    There was a problem retrieving the options
  </span>
</section>
`;

exports[`component::Typeahead render phases renders the NO_RESULTS phase 1`] = `
<section
  className="typeahead "
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="m-btn-inside-input input-contains-label"
  >
    <label
      className="input-contains-label_before input-contains-label_before__search"
    />
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter your search text"
      type="text"
      value=""
    />
  </div>
  <span
    className="no-results"
  >
    No results found
  </span>
</section>
`;

exports[`component::Typeahead render phases renders the RESULTS phase 1`] = `
<section
  className="typeahead "
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="m-btn-inside-input input-contains-label"
  >
    <label
      className="input-contains-label_before input-contains-label_before__search"
    />
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter your search text"
      type="text"
      value=""
    />
  </div>
  <div
    className="typeahead-selector"
  >
    <ul>
      <li
        className="typeahead-option body-copy"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        foo
      </li>
    </ul>
  </div>
</section>
`;

exports[`component::Typeahead render phases renders the TOO_MANY phase 1`] = `
<section
  className="typeahead "
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="m-btn-inside-input input-contains-label"
  >
    <label
      className="input-contains-label_before input-contains-label_before__search"
    />
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter your search text"
      type="text"
      value=""
    />
  </div>
  <div
    className="typeahead-selector"
  >
    <ul>
      <li
        className="typeahead-option body-copy"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        foo
      </li>
      <li
        className="typeahead-option body-copy"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        bar
      </li>
      <li
        className="typeahead-option body-copy"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        baz
      </li>
      <li
        className="typeahead-option body-copy"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        qaz
      </li>
      <li
        className="typeahead-option body-copy"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        quux
      </li>
      <li
        className="footer"
      >
        Continue typing for more results
      </li>
    </ul>
  </div>
</section>
`;
